--- a/Phase 2/Site/styles/typefaces.css
+++ b/Phase 2/Site/styles/typefaces.css
@@ -43,7 +43,7 @@ h1 {
 	transition: all 0.2s;
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1100px) {
     p {
         font-size: 1.3em;
     }
